# Refactor-homwork

./: README.md  yaml
refactorNCI/: pyproject.toml
refactorNCI/refactornci/: main.py
refactorNCI/tests/: test_main.py
refactorNCI2/: pyproject.toml
