[tool.poetry]
name = "refactornci2"
version = "0.1.0"
description = ""
authors = ["icedog55puck <144482284+icedog55puck@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
